`SideNav` - Prevent hidden panels from triggering unnecessary overflow scrolling (#2535)

--- a/packages/components/src/styles/components/side-nav/content.scss
+++ b/packages/components/src/styles/components/side-nav/content.scss
@@ -35,6 +35,11 @@
 
 .hds-side-nav__content-panel {
   padding: 0 var(--token-side-nav-wrapper-padding-horizontal);
+  overflow: hidden; // the panel itself does not need to be scrollable
+
+  &[aria-hidden="true"] {
+    max-height: 0; // prevents hidden panels from causing scrolling
+  }
 }
 
 // (LIST) TITLE
